drupal-mysql.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: drupal-mysql-service
spec:
  ports:
    -
      name: mysql
      port: 3306
      protocol: TCP
  selector:
    app: drupal-mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal-mysql
spec:
  selector:
    matchLabels:
      app: drupal-mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: drupal-mysql
    spec:
      containers:
        -
          image: "mysql:5.7"
          name: cont-drupal-mysql
          ports:
            -
              containerPort: 3306
              name: mysql
              protocol: TCP
          volumeMounts:
            -
              mountPath: /var/lib/mysql
              name: vol-drupal
              subPath: dbdata
      volumes:
        -
          name: vol-drupal
          persistentVolumeClaim:
            claimName: drupal-pvc-mysql
